# cmake-vcpkg-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile
cmake/: AutoCCache.cmake
cmake/presets/: base.json  linux.json  windows.json
scripts/: init_linux.sh  init_windows.nu
